fixed margins on mobile

--- a/src/components/CardColumns/CardColumn.css
+++ b/src/components/CardColumns/CardColumn.css
@@ -35,6 +35,6 @@
 
 @media (max-width: 759px) {
   .card-container {
-    padding: 15px;
+    padding: 25px;
   }
 }
