--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -359,6 +359,9 @@
   .text {
     left: 11%;
   }
+  .project-container {
+    padding: 10px !important;
+  }
 }
 
 .project-container {
